<?xml version="1.0"?>
<package>
  <name>action_layer</name>
  <version>0.1.1</version>
  <description>The action_layer package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="daniel.grieneisen@vecna.com">daniel.grieneisen</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>BSD</license>


  <!-- Url tags are optional, but mutiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/action_layer</url> -->


  <!-- Author tags are optional, mutiple are allowed, one per tag -->
  <!-- Authors do not have to be maintianers, but could be -->
  <!-- Example: -->
  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->
  <author email="daniel.grieneisen@vecna.com">daniel.grieneisen</author>

  <!-- The *_depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Examples: -->
  <!-- Use build_depend for packages you need at compile time: -->
  <!--   <build_depend>message_generation</build_depend> -->
  <build_depend>yaml-cpp</build_depend>
  <build_depend>libopencv-dev</build_depend>
  <build_depend>boost</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>costmap_manager</build_depend>
  <build_depend>costmap_2d</build_depend>
  <build_depend>mprim_msgs</build_depend>
  <build_depend>vutils</build_depend>
  <build_depend>events_lib</build_depend>
  <build_depend>task_action_msgs</build_depend>
  <build_depend>nrv_ros_msgs</build_depend>
  <build_depend>base_local_planner</build_depend>
  <build_depend>teb_local_planner</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>fiducial_detector</build_depend>
  <build_depend>laser_filters</build_depend>
  <build_depend>vgazebo_plugins</build_depend>

  <!-- Use buildtool_depend for build tool packages: -->
  <!--   <buildtool_depend>catkin</buildtool_depend> -->
  <!-- Use run_depend for packages you need at runtime: -->
  <!--   <run_depend>message_runtime</run_depend> -->
  <run_depend>yaml-cpp</run_depend>
  <run_depend>libopencv-dev</run_depend>
  <run_depend>boost</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>costmap_manager</run_depend>
  <run_depend>costmap_2d</run_depend>
  <run_depend>mprim_msgs</run_depend>
  <run_depend>events_lib</run_depend>
  <run_depend>vutils</run_depend>
  <run_depend>task_action_msgs</run_depend>
  <run_depend>nrv_ros_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>base_local_planner</run_depend>
  <run_depend>teb_local_planner</run_depend>
  <run_depend>fiducial_detector</run_depend>
  <run_depend>vgazebo_plugins</run_depend>

  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->
  <buildtool_depend>catkin</buildtool_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->

    <!-- Other tools can request additional information be placed here -->

  </export>
</package>

