<?xml version="1.0"?>
<package>
  <name>vgazebo_plugins</name>
  <version>0.0.0</version>
  <description>The vgazebo_plugins package</description>

  <maintainer email="gazebo@fake.email">gz</maintainer>
  <license>None</license>
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>gazebo</build_depend>
  <build_depend>gazebo_plugins</build_depend>

  <run_depend>gazebo</run_depend>
  <run_depend>gazebo_plugins</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
